# rk2

./: Animal.h  CMakeLists.txt  LICENSE  Sheep.cpp  Sheep.h  main.cpp  tests.cpp
.github/workflows/: build.yml
